Modificaciones tras la instalacion en MN

--- a/etc/greasy.conf
+++ b/etc/greasy.conf
@@ -43,18 +43,18 @@ LogFile=greasy.log
 #
 #  - 0 : Silent. No log information will be generated.
 #
-#  - 1 : Fatal. Only fatal errors will be recorded.
+#  - 1 : Error. Only fatal errors will be recorded.
 #
-#  - 2 : Error. All errors will be recorded. 
+#  - 2 : Warning. All errors & warnings will be recorded.
 #
-#  - 3 : Info. More informations will be printed.
+#  - 3 : Info. Standard information will be printed.
 #
 #  - 4 : Debug. Show debug information. Warning: Logs will grow very fast!
 #
-#  - 5 : Dev. Show development debug info.Warning: Logs will grow VERY VERY fast!
+#  - 5 : Devel. Show development debug info. Warning: Logs will grow VERY VERY fast!
 #
 
-LogLevel=4
+LogLevel=3
 
 #########################
 #			#
