Segunda version despues del refactoring con el basic engine funcionando

--- a/etc/greasy.conf
+++ b/etc/greasy.conf
@@ -6,8 +6,8 @@
 #########################################
 
 # Greasy engine to use.
-# Possible values: "mpi" or "slurm"
-GreasyEngine=mpi
+# Possible values: "basic", "mpi" or "slurm"
+Engine=mpi
 
 # Maximum number of retries for a failed task.
 # If not set, no retries will be done for a failed task.
