--- a/etc/Makefile.in
+++ b/etc/Makefile.in
@@ -135,7 +135,9 @@ datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+greasy_bindir = @greasy_bindir@
 greasy_engine = @greasy_engine@
+greasy_etcdir = @greasy_etcdir@
 host_alias = @host_alias@
 htmldir = @htmldir@
 includedir = @includedir@
@@ -145,6 +147,7 @@ libdir = @libdir@
 libexecdir = @libexecdir@
 localedir = @localedir@
 localstatedir = @localstatedir@
+machine_mpirun = @machine_mpirun@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 mpicxx_present = @mpicxx_present@
