--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,2 +1,4 @@
 exampledir = $(prefix)/example
-example_DATA= bsc_greasy.job example.txt short-example.txt
+example_DATA= example.txt short-example.txt
+example_SCRIPTS = bsc_greasy.job 
+EXTRA_DIST = bsc_greasy.job  example.txt short-example.txt 
