--- a/example/bsc_greasy.job.in
+++ b/example/bsc_greasy.job.in
@@ -7,32 +7,23 @@
 ##########################################################
 # Fill here with a number of cpus according to your needs
 # Keep in mind that one task is reserved for the master
+# if using the mpi engine
 ##########################################################
+
 # @ total_tasks = 4
 
 #########################################
 # and set an appropiate wall_clock_limit
 #########################################
+
 # @ wall_clock_limit = 01:10:00
-
-MACHINE=`echo $BSC_MACHINE | tr '[:lower:]' '[:upper:]'`
-
-if [ "$MACHINE" =  "UV100" ]; then
-  MPIRUN=mnrun
-elif [ "$MACHINE" = "NVIDIA"  ]; then
-  MPIRUN=srun
-else 
-  MPIRUN=srun
-fi
-
-EXE=/gpfs/apps/$MACHINE/GREASY/2.0/bin/greasy
 
 ###########################################
 # Here goes the path to the file where you 
 # have the list of tasks
 ###########################################
-FILE=short-example.txt
 
+FILE=short-example.txt
 
 ###########################################
 # Here goes the path to the place where the 
@@ -40,7 +31,29 @@ FILE=short-example.txt
 # By default, if not set, it will use:
 # ./greasy.log
 ###########################################
+
 export GREASY_LOGFILE=greasy-$SLURM_JOBID.log
+
+
+#################################
+# Do not edit beyond this line
+#################################
+
+# Some setup parameters
+
+GREASY_BINDIR=@greasy_bindir@
+GREASY_CONFDIR=@greasy_etcdir@
+EXE=$GREASY_BINDIR/greasy
+
+GREASY_ENGINE=`cat $GREASY_CONFDIR/greasy.conf | grep Engine | cut -d= -f 2`
+
+if [ "$GREASY_ENGINE" = "mpi" ]; then
+  MPIRUN=@machine_mpirun@
+else
+  MPIRUN=""
+fi
+
+# Run Greasy
 
 $MPIRUN $EXE $FILE
 
