--- a/config.h.in
+++ b/config.h.in
@@ -97,6 +97,9 @@
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
+/* Thread Engine enabled with TBB */
+#undef THREAD_ENGINE
+
 /* Version number of package */
 #undef VERSION
 
