thread engine almost working ... looks good

--- a/configure.ac
+++ b/configure.ac
@@ -12,9 +12,10 @@ AC_SUBST(greasy_engine,[basic])
 # Checks for programs.
 AC_PROG_CC
 
-# Check for mpi
+# Checks for MPI-ENGINE
+
 AC_ARG_ENABLE(mpi-engine,
-  [  --enable-mpi-engine    enable MPI engine (default=no)],
+  [  --enable-mpi-engine			enable MPI engine (default=no)],
   [mpi_engine=${enableval}],
   [mpi_engine=no])
 
@@ -63,10 +64,10 @@ AC_FUNC_FORK
 AC_FUNC_MALLOC
 AC_CHECK_FUNCS([getcwd gethostname gettimeofday regcomp])
 
-# Checks for other command line options
+# Checks for SLURM-ENGINE
 
 AC_ARG_ENABLE(slurm-engine,
-  [  --enable-slurm-engine    enable SLURM engine],
+  [  --enable-slurm-engine			enable SLURM engine],
   [slurm_engine=${enableval}],
   [slurm_engine=no])
 
@@ -84,10 +85,10 @@ if test x$slurm_engine = xyes; then
 
 fi
 
-#TODO: Implement checks for SLURM
+# Checks for THREAD-ENGINE
 
 AC_ARG_ENABLE(thread-engine,
-  [  --enable-thread-engine    enable THREAD engine. This option will use TBB. The configure will use the system TBB (if any) specified with the option --with-tbb otherwise, a local the version of TBB will be compiled.
+  [  --enable-thread-engine		enable THREAD engine. This option will compile a local distribution of TBB by default. If --with-tbb is set it will used the specified installation of TBB.],
   [thread_engine=${enableval}],
   [thread_engine=no])
 
