--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,10 +8,10 @@ greasy_SOURCES += mpiengine.cpp mpiengine.h
 AM_CPPFLAGS += -DMPI_ENGINE
 endif
 
-if SLURM_ENGINE
-greasy_SOURCES += slurmengine.cpp slurmengine.h 
-AM_CPPFLAGS += -DSLURM_ENGINE
-endif
+# if SLURM_ENGINE
+# greasy_SOURCES += slurmengine.cpp slurmengine.h 
+# AM_CPPFLAGS += -DSLURM_ENGINE
+# endif
 
 if THREAD_ENGINE
 greasy_SOURCES += threadengine.cpp threadengine.h 
